--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "919674b93712bcbbf4978290ffdc6274"
-application_url = "https://cant-kg-samples-cemetery.trycloudflare.com"
+application_url = "https://boxy-shopify-app.onrender.com"
 embedded = true
 name = "OrderBAPI"
 handle = "orderbapi"
@@ -27,9 +27,9 @@ scopes = "write_products, read_orders, read_customers, customer_read_orders, cus
 
 [auth]
 redirect_urls = [
-  "https://cant-kg-samples-cemetery.trycloudflare.com/auth/callback",
-  "https://cant-kg-samples-cemetery.trycloudflare.com/auth/shopify/callback",
-  "https://cant-kg-samples-cemetery.trycloudflare.com/api/auth/callback"
+  "https://boxy-shopify-app.onrender.com/auth/callback",
+  "https://boxy-shopify-app.onrender.com/auth/shopify/callback",
+  "https://boxy-shopify-app.onrender.com/api/auth/callback"
 ]
 
 [pos]
