--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@remix-run/serve": "^2.15.0",
     "@shopify/app-bridge-react": "^4.1.6",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-app-remix": "^3.7.0",
+    "@shopify/shopify-api": "^11.12.0",
+    "@shopify/shopify-app-remix": "^3.8.2",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
     "axios": "^1.7.9",
     "isbot": "^5.1.0",
