add webshop save update

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -23,7 +23,7 @@ api_version = "2025-01"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products, read_orders, read_customers, customer_read_orders, customer_write_orders, write_assigned_fulfillment_orders, read_payment_terms"
+scopes = "read_orders, write_orders, read_customers"
 
 [auth]
 redirect_urls = [
