--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "919674b93712bcbbf4978290ffdc6274"
-application_url = "https://boxy-shopify-app.onrender.com"
+application_url = "https://title-standing-discount-hull.trycloudflare.com"
 embedded = false
 name = "BoxyHelper"
 handle = "BoxyHelper"
@@ -27,9 +27,9 @@ scopes = "read_orders, write_orders, read_customers"
 
 [auth]
 redirect_urls = [
-  "https://boxy-shopify-app.onrender.com/auth/callback",
-  "https://boxy-shopify-app.onrender.com/auth/shopify/callback",
-  "https://boxy-shopify-app.onrender.com/api/auth/callback"
+  "https://title-standing-discount-hull.trycloudflare.com/auth/callback",
+  "https://title-standing-discount-hull.trycloudflare.com/auth/shopify/callback",
+  "https://title-standing-discount-hull.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
